--- a/ChefParent/ChefCore/pom.xml
+++ b/ChefParent/ChefCore/pom.xml
@@ -7,5 +7,33 @@
   </parent>
   <artifactId>ChefCore</artifactId>
   <name>ChefCore</name>
-  <url>http://sjbude183v.corp.webex.com:8888/artifactory/repo/</url>
+ <url>https://github.com/harshashetty23/mvn-reposit</url>
+  <dependencies>
+		<dependency>
+			<groupId>org.hibernate.javax.persistence</groupId>
+			<artifactId>hibernate-jpa-2.0-api</artifactId>
+			<version>1.0.1.Final</version>
+		</dependency>
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-core</artifactId>
+			<version>3.6.7.Final</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-tx</artifactId>
+			<version>3.2.2.RELEASE</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-context</artifactId>
+			<version>3.2.2.RELEASE</version>
+			<exclusions>
+				<exclusion>
+					<groupId>commons-logging</groupId>
+					<artifactId>commons-logging</artifactId>
+				</exclusion>
+			</exclusions>
+		</dependency>
+  </dependencies>
 </project>
